docs: Update homepage

--- a/docs/node/docs/pages/getting-started/overview.mdx
+++ b/docs/node/docs/pages/getting-started/overview.mdx
@@ -10,7 +10,7 @@ import { Callout, Steps, Button } from "vocs/components";
 
 # Tevm Node Overview
 
-Tevm Node is a **full Ethereum execution environment** that runs natively in JavaScript. It provides the complete functionality of an Ethereum node without requiring any blockchain client installation.
+Tevm Node is an **Ethereum execution environment** that runs natively in JavaScript. It provides the complete functionality of an Ethereum node without requiring any blockchain client installation.
 
 Conceptually, it works very similar to Anvil and Hardhat but with more powerful TypeScript native interop.
 
