📚 docs: add WhatsABI integration documentation for upcoming feature

--- a/docs/node/docs/pages/api/methods.mdx
+++ b/docs/node/docs/pages/api/methods.mdx
@@ -628,6 +628,13 @@ const hash = await node.eth.sendTransaction({
         <li>📄 tevm_setAccount</li>
       </ul>
     </details>
+    
+    <details>
+      <summary style={{fontWeight: 'bold', marginBottom: '0.5rem', cursor: 'pointer'}}>Utility Actions</summary>
+      <ul style={{listStyleType: 'none', paddingLeft: '1rem'}}>
+        <li>📄 whatsabi - <span style={{color: 'var(--vocs-color_warning)', fontWeight: 'bold'}}>[Coming Soon]</span> Analyze contract bytecode, discover function selectors, resolve proxy implementations, and determine ABIs even for unverified contracts</li>
+      </ul>
+    </details>
   </div>
 </div>
 
